--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ body {
     text-transform: uppercase;
     letter-spacing: 1.2px;
     color: white;
+    /* margin-bottom: 35px !important; */
 }
 
 .btn:focus {
@@ -111,7 +112,7 @@ body {
     transition: all 0.5s;
 }
 
-.btn--big::after {
+.btn--big::after{
     content: attr(data-type);
     font-size: 1rem;
     color: #445361;
@@ -178,12 +179,17 @@ body {
 /* --------- Media queries */
 
 @media (max-width: 414px) {
+
+    .game-area {
+        height: 90vh;
+    }
+
     .controls-area {
         width: 100%;
     }
 
     .btn--big {
-        margin: 0 10px;
+        margin: 20px 10px;
         padding: 5px;
         border: 5px solid;
         width: 50px;
@@ -233,9 +239,6 @@ body {
 }
 
 @media (max-width: 320px) {
-    .game-area {
-        height: 70vh;
-    }
 
     .controls-area {
         width: 75%;
